--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git in a Group</title>
   </head>
-  <body></body>
+  <body>
+
+<h1>
+  Git in a Group
+</h1>
+
+  </body>
 </html>
