--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Git in a Group</title>
   </head>
   <body>
+    <h1>Git in a Group</h1>
 
-<h1>
-  Git in a Group
-</h1>
-
+    <p>wow</p>
   </body>
 </html>
